@@ -409,14 +409,20 @@ class Monitor:
 
         self.log.write(1, "Actually running commands (%d)" % len(process_list))
         self.log.write(2, pprint.pformat(process_list))
-        for pid, process in self.process_list.iteritems():
-            self.log.write(1, '  * %d: %s' % (pid, process['command']['section']))
+        for pid in self.process_list.keys():
+            try:
+                self.log.write(1, '  * %d: %s' % (pid, self.process_list[pid]['command']['section']))
+            except KeyError:
+                self.log.write(1, '  * %d: vanished' % pid)
 
         self.log.write(1, "Scheduled commands for respawn (%d)" % len(schedule))
         self.log.write(2, pprint.pformat(schedule))
 
-        for pid, process in self.schedule.iteritems():
-            self.log.write(1, '  * %d: %s' % (pid, process['command']['section']))
+        for pid in self.schedule.keys():
+            try:
+                self.log.write(1, '  * %d: %s' % (pid, self.schedule[pid]['command']['section']))
+            except KeyError:
+                self.log.write(1, '  * %d: vanished' % pid)
 
     def respawn_command(self):
         """ Restart scheduled commands. """
